# sentiment-recognition

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/db/: crud.py  models.py  schemas.py
app/frontend/templates/: main.html  sentiment.html
app/routers/: analysis.py
app/sentiment_analysis/: sentiment.py
