[tool.poetry]
name = "zynth"
version = "0.1.0"
description = "Sample service using FastAPI."
authors = ["braythe"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
vaderSentiment = "^3.3.2"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
